/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.7.0/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    id("com.gradleup.shadow") version "9.6.1"
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation platform('org.apache.logging.log4j:log4j-bom:2.26.1')

    // This dependency is used by the application.
    implementation 'org.json:json:20260719'
    implementation ('io.jsonwebtoken:jjwt-api:0.13.0')
    runtimeOnly('io.jsonwebtoken:jjwt-impl:0.13.0')
    runtimeOnly('io.jsonwebtoken:jjwt-orgjson:0.13.0')
    implementation 'org.bouncycastle:bcpkix-jdk18on:1.85'
    implementation 'org.apache.commons:commons-lang3:3.20.0'
    implementation 'org.apache.logging.log4j:log4j-api:${log4j-api.version}'


    runtimeOnly 'org.apache.logging.log4j:log4j-core:2.26.1'
    runtimeOnly 'org.apache.logging.log4j:log4j-slf4j2-impl' 
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'me.rainma22.dillydally.Server'
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}
